Cambio a minuscula 'x' en detalles pedidos

--- a/app/src/main/res/layout/item_detalles_pedido.xml
+++ b/app/src/main/res/layout/item_detalles_pedido.xml
@@ -53,7 +53,7 @@
                     android:id="@+id/lblCantProductoDetalles"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="X 5"
+                    android:text="x 5"
                     android:textSize="15sp"
                     android:layout_columnSpan="1"
                     />
